--- a/project.config.json
+++ b/project.config.json
@@ -1,7 +1,7 @@
 {
 	"description": "项目配置文件。",
 	"setting": {
-		"urlCheck": false,
+		"urlCheck": true,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
@@ -45,7 +45,7 @@
 					"id": 3,
 					"name": "文章",
 					"pathName": "pages/article/article",
-					"query": "id=8"
+					"query": "id=6"
 				}
 			]
 		}
